# RNMC_native

./: .gitignore  .gitmodules  README.md  build.sh  meson.build  shell.nix
python/: RNMC.py  analyze.py  serialize.py
src/: RNMC.c  SQL_programs.h  dispatcher.c  dispatcher.h  reaction_network.c  reaction_network.h  sampler.c  sampler.h  simulation.c  simulation.h  solvers.c  solvers.h  sql_programs.c  sql_programs.h  test.c  test.h
test_materials/ronalds_network/: dependents  initial_state  number_of_dependents  number_of_products  number_of_reactants  products  rates  reactants
test_materials/ronalds_network/simulation_histories/: 100  106  108  111  112  115  117  118  119  120  123  124  126  127  129  136  138  14  157  160  165  17  178  181  185  186  189  194  198  2  20  200  203  209  218  22  221  222  223  229  (+261 more)
test_materials/ronalds_network_db/: initial_state  rn.sqlite
test_materials/simulation_params/: time_cutoff
test_materials/test_simulation_histories/: 10  105  110  125  13  132  133  137  143  145  151  152  155  156  159  161  163  164  168  169  170  172  173  176  179  182  190  193  196  197  201  202  205  207  210  211  215  220  230  236  (+1664 more)
